// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling 
    $36.00
  </h3>
</div>
`;

exports[`Should render ExpensesSummary correctly with zero expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     
    expense
     totalling 
    $0.00
  </h3>
</div>
`;
